--- a/css/style.css
+++ b/css/style.css
@@ -21,11 +21,11 @@ body {
   background-color: #ccff00;
 }
 
-/* .btnText {
+.btnText {
   background-color: #ccff00;
-  color: ;
+
   border-radius: 99999px;
-} */
+}
 
 /* Second nav  */
 
